# WP

./: CMakeLists.txt  README.md  Window.cpp  Window.h  main.cpp
lab1/: Button.cpp  Button.h  CMakeLists.txt  Dimensions.cpp  Dimensions.h  MainWindow.h  README.md  TextBox.cpp  TextBox.h  TextLabel.cpp  TextLabel.h  Window.h  WindowObject.cpp  WindowObject.h  config.h  main.cpp
lab1/TEX&REPORT/: Chapter_1.tex  Conclusions.tex  Title.tex
lab2/: .gitignore  Button.h  CMakeLists.txt  Dimensions.cpp  ListBox.cpp  ListBox.h  MainWindow.cpp  MainWindow.h  Resource.h  Resource.rc  ScrollBar.cpp  ScrollBar.h  TextBox.h  TextLabel.cpp  WindowObject.cpp  WindowObject.h  config.h  main.cpp  temp.cpp
lab2/TEX&REPORT/: Chapter_1.tex  Conclusions.tex  Introduction.tex  Title.tex
lab3/: CMakeLists.txt  README.md  gitignore  main.cpp  main.h
lab3/THE&REPORT/: Chapter_1.tex  Conclusions.tex  Introduction.tex  Title.tex  main.tex
lab3/Win/: settups.h
lab3/Win/Win.Core/include/: Config.h  Dimensions.h  ShortKey.h  WindowObject.h
lab3/Win/Win.Core/src/: Config.cpp  Dimensions.cpp  ShortKey.cpp  WindowObject.cpp
lab3/Win/Win.Paint/Advanced/include/: Bezier.h
lab3/Win/Win.Paint/Advanced/src/: Bezier.cpp
lab3/Win/Win.Paint/Core/include/: Pen.h
lab3/Win/Win.Paint/Core/src/: Pen.cpp
lab3/Win/Win.Paint/Shapes/Ellipse/include/: EllipseShape.h
lab3/Win/Win.Paint/Shapes/Ellipse/src/: EllipseShape.cpp
lab3/Win/Win.Paint/Shapes/FreeformLine/include/: FreeformLine.h
lab3/Win/Win.Paint/Shapes/FreeformLine/src/: FreeformLine.cpp
lab3/Win/Win.Paint/Shapes/StraightLine/include/: StraightLine.h  StraitLine.h
lab3/Win/Win.Paint/Shapes/StraightLine/src/: StraitLine.cpp
lab3/Win/Win.Paint/Shapes/Tetragon/include/: Tetragon.h
lab3/Win/Win.Paint/Shapes/Tetragon/src/: Tetragon.cpp
lab3/Win/Win.Paint/Tools/Pen/include/: Pen.h
lab3/Win/Win.Widgets/Label/include/: TextLabel.h
lab3/Win/Win.Widgets/Label/src'/: TextLabel.cpp
lab3/Win/Win.Widgets/MainWindow/include/: MainWindow.h
lab3/Win/Win.Widgets/MainWindow/src/: MainWindow.cpp
lab3/Win/Win.Widgets/ScrollBar/include/: ScrollBar.h
lab3/Win/Win.Widgets/ScrollBar/src/: ScrollBar.cpp
lab3/Win/Win.Widgets/SystemMenu/include/: Menu.h  SystemMenu.h
lab3/Win/Win.Widgets/TextBox/include/: TextBox.h
lab4/: CMakeLists.txt  Resource.rc  resource.h
lab4/Animations/Animations/: Animations.sln
lab4/Animations/Animations/Animations/: Animations.rc  Animations.vcxproj  Animations.vcxproj.filters  DynamicAnimation.cpp  DynamicAnimation.h  ReadMe.txt  Resource.h  StaticAnimation.cpp  StaticAnimation.h  main.cpp  main.h  stdafx.cpp
lab4/Animations/Animations/Core/: Core.vcxproj  Core.vcxproj.filters  MainHelper.cpp  MainHelper.h  Shape.cpp  Shape.h  stdafx.h
lab4/Animations/Animations/Figures/: Arrow.cpp  Arrow.h  Circle.cpp  Circle.h  EllipseFigure.cpp  EllipseFigure.h  Figures.vcxproj  Figures.vcxproj.filters  ReadMe.txt  Square.cpp  Square.h  Triangle.h  stdafx.cpp  stdafx.h
lab4/TEX&REPORT/TEX/: Chapter_1.tex  Conclusions.tex  Introduction.tex  Title.tex
lab4/THE&REPORT/: README.md
lab4/Win/Win.Paint/Advanced/src/: Bezier.cpp
lab4/Win/Win.Paint/Shapes/FreeformLine/src/: FreeformLine.cpp
lab4/Win/Win.Paint/Shapes/StraightLine/src/: StraightLine.cpp
lab4/Win/Win.Paint/Tools/Eraser/include/: Eraser.h
lab4/Win/Win.Paint/Tools/Eraser/src/: Eraser.cpp
lab4/Win/Win.Paint/Tools/Pen/src/: Pen.cpp
lab4/Win/Win.Widgets/SystemMenu/include/: PopupMenu.h
lab4/Win/Win.Widgets/SystemMenu/src/: Menu.cpp  PopupMenu.cpp  SystemMenu.cpp
lab4/Win/Win.Widgets/TextBox/src/: TextBox.cpp
